# Departamento_Marketing_ML

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  PRD-v2.md  PRD.md  README.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  vitest.config.ts
analysis/: clustering.ipynb  eda.ipynb
analysis/marketing_analytics/: __init__.py  cluster.py  config.py  evaluate.py  features.py  interpret.py  loading.py  metrics.py  plots.py  reduce.py  score.py
analysis/models/: metrics_v1.json
analysis/scripts/: generate_segments.py  run_clustering.py
analysis/tests/: conftest.py  test_cluster.py  test_evaluate.py  test_features.py  test_loading.py  test_score.py
data/: segment_profiles.json  segments.csv
docs/: api.md  architecture.md  contributing.md  data-pipeline.md  getting-started.md  index.md  ml-pipeline.md  segmentation-model.md
prisma/: schema.prisma  seed.ts
prisma/migrations/20260715181512_fase3_auth_base/: migration.sql
scripts/: import-csv.ts  relabel-segments.ts
src/: proxy.ts
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
src/app/(auth)/: layout.tsx
src/app/(dashboard)/: layout.tsx
src/app/(marketing)/: layout.tsx  page.tsx
src/components/charts/: donut-chart.tsx  heatmap.tsx  (+5 more)
src/config/: constants.ts  openapi.ts  site.ts
src/lib/: prisma.ts  utils.ts
src/types/: index.ts  next-auth.d.ts
tests/fixtures/: sample_marketing.csv
tests/integration/: api-customers.test.ts  api-insights.test.ts  api-metrics.test.ts
(+51 files in other folders)
