[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-analytics"
version = "1.0.0"
description = "Camada de ML para segmentação de clientes de cartão de crédito"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scikit-learn==1.6.1",
    "tensorflow==2.18.1",
    "joblib==1.4.2",
    "matplotlib==3.9.4",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.9.4",
    "pyright==1.1.393",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["analysis"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
reportMissingImports = false
reportMissingTypeArgument = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
reportArgumentType = false
reportCallIssue = false
reportGeneralTypeIssues = false
reportUnusedVariable = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false

[tool.pytest.ini_options]
testpaths = ["analysis/tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --tb=short"
